...
    
    private func proceedToNextQuestionOrResults() {
        if isLastQuestion {
            statisticService?.store(correct: correctAnswers, total: self.questionsAmount)
            let message: String = statisticService?.getResultGame(correct: correctAnswers, total: self.questionsAmount) ?? ""
            let resultQuiz: QuizResultsViewModel = QuizResultsViewModel(
                title: "Этот раунд окончен",
                text: message,
                buttonText: "Сыграть еще раз")
            
            viewController?.show(quiz: resultQuiz)
            
        } else {
...
